# serializer version: 1
# name: test_attach_files
  dict({
    '_id': 'foo',
    'files': list([
      dict({
        'download_url': 'https://virtool.example.com/api/indexes/foo/files/reference.fa.gz',
        'id': 1,
        'index': 'foo',
        'name': 'reference.fa.gz',
        'size': 1234567,
        'type': 'fasta',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/indexes/foo/files/reference.json.gz',
        'id': 2,
        'index': 'foo',
        'name': 'reference.json.gz',
        'size': 1234567,
        'type': 'json',
      }),
    ]),
    'reference': dict({
      'id': 'bar',
    }),
  })
# ---
# name: test_create[None]
  dict({
    '_id': 'bf1b993c',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'job': None,
    'manifest': 'manifest',
    'ready': False,
    'reference': dict({
      'id': 1,
    }),
    'task': dict({
      'id': 1,
    }),
    'user': dict({
      'id': 1,
    }),
    'version': 0,
  })
# ---
# name: test_create[abc]
  dict({
    '_id': 'abc',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'job': None,
    'manifest': 'manifest',
    'ready': False,
    'reference': dict({
      'id': 1,
    }),
    'task': dict({
      'id': 1,
    }),
    'user': dict({
      'id': 1,
    }),
    'version': 0,
  })
# ---
